@@ -1,5 +1,5 @@
 {% extends 'wagtailadmin/notifications/base.html' %}
-{% load i18n %}
+{% load i18n wagtailadmin_tags %}
 
 {% block content %}
     {% if page %}
